--- a/pom.xml
+++ b/pom.xml
@@ -152,10 +152,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0</version>
+                <version>2.22.2</version>
                 <configuration>
 <!--                    <argLine>-Xmx2048m -XX:MaxPermSize=256m</argLine>-->
-                    <argLine>@{argLine} -Xmx2048m -XX:MaxPermSize=256m</argLine>
+<!--                    <argLine>@{argLine} -Xmx2048m -XX:MaxPermSize=256m</argLine>-->
 <!--                    <systemPropertyVariables>-->
 <!--                        <debugForkedProcess>-javaagent:/opt/buildAgent/tools/jacoco.0.8.11/jacocoagent.jar=append=true,destfile=/opt/buildAgent/temp/buildTmp/JACOCO7948386344573348721coverage/jacoco.exec</debugForkedProcess>-->
 <!--                    </systemPropertyVariables>-->
